# packages/backend/src/OpenApi/swagger.json
@@ -173,6 +173,9 @@
           "full_name": {
             "type": "string"
           },
+          "is_write_in": {
+            "type": "boolean"
+          },
           "party": {
             "type": "string"
           },
@@ -576,6 +579,9 @@
           },
           "contact_email": {
             "type": "string"
+          },
+          "draggable_ballot": {
+            "type": "boolean"
           },
           "email_campaign_count": {
             "type": "number"
@@ -1134,6 +1140,9 @@
           "description": {
             "type": "string"
           },
+          "enable_write_in": {
+            "type": "boolean"
+          },
           "num_winners": {
             "type": "number"
           },
@@ -1165,6 +1174,12 @@
           },
           "voting_method": {
             "$ref": "#/components/schemas/VotingMethod"
+          },
+          "write_in_candidates": {
+            "items": {
+              "$ref": "#/components/schemas/WriteInCandidate"
+            },
+            "type": "array"
           }
         },
         "required": [
@@ -1201,6 +1216,9 @@
           },
           "score": {
             "type": "number"
+          },
+          "write_in_name": {
+            "type": "string"
           }
         },
         "required": [
@@ -1445,6 +1463,8 @@
                 "canFlagElectionRoll",
                 "canInvalidateBallot",
                 "canInvalidateElectionRoll",
+                "canProcessWriteIns",
+                "canQueryElections",
                 "canSendEmails",
                 "canUnflagElectionRoll",
                 "canUpdatePublicArchive",
@@ -1490,6 +1510,46 @@
           "STV"
         ],
         "type": "string"
+      },
+      "WriteInCandidate": {
+        "properties": {
+          "aliases": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array"
+          },
+          "approved": {
+            "type": "boolean"
+          },
+          "candidate_name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "aliases",
+          "approved",
+          "candidate_name"
+        ],
+        "type": "object"
+      },
+      "WriteInData": {
+        "properties": {
+          "names": {
+            "additionalProperties": {
+              "type": "number"
+            },
+            "type": "object"
+          },
+          "race_id": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "names",
+          "race_id"
+        ],
+        "type": "object"
       },
       "allocatedScoreCandidate": {
         "properties": {
@@ -1541,6 +1601,9 @@
               "$ref": "#/components/schemas/tabulatorLog"
             },
             "type": "array"
+          },
+          "numUnprocessedWriteIns": {
+            "type": "number"
           },
           "other": {
             "items": {
@@ -1724,6 +1787,9 @@
             },
             "type": "array"
           },
+          "numUnprocessedWriteIns": {
+            "type": "number"
+          },
           "other": {
             "items": {
               "$ref": "#/components/schemas/candidate"
@@ -1903,6 +1969,9 @@
             },
             "type": "array"
           },
+          "numUnprocessedWriteIns": {
+            "type": "number"
+          },
           "other": {
             "items": {
               "$ref": "#/components/schemas/candidate"
@@ -2029,6 +2098,9 @@
             "type": "number"
           },
           "nExhaustedViaSkippedRank": {
+            "type": "number"
+          },
+          "numUnprocessedWriteIns": {
             "type": "number"
           },
           "other": {
@@ -2213,6 +2285,9 @@
             },
             "type": "array"
           },
+          "numUnprocessedWriteIns": {
+            "type": "number"
+          },
           "other": {
             "items": {
               "$ref": "#/components/schemas/candidate"
@@ -2366,6 +2441,9 @@
               "$ref": "#/components/schemas/rankedRobinCandidate"
             },
             "type": "array"
+          },
+          "numUnprocessedWriteIns": {
+            "type": "number"
           },
           "other": {
             "items": {
@@ -2845,6 +2923,9 @@
               "$ref": "#/components/schemas/starCandidate"
             },
             "type": "array"
+          },
+          "numUnprocessedWriteIns": {
+            "type": "number"
           },
           "other": {
             "items": {
@@ -3571,6 +3652,101 @@
                     "election": {
                       "type": "object",
                       "$ref": "#/components/schemas/Election"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/QueryElections": {
+      "get": {
+        "summary": "Query Elections based on time range (sys-admin only)",
+        "tags": [
+          "Elections"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "start_time": {
+                    "type": "date"
+                  },
+                  "end_time": {
+                    "type": "date"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "List of elections",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "open_elections": {
+                      "oneOf": [
+                        {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/Election"
+                          }
+                        },
+                        {
+                          "type": null
+                        }
+                      ]
+                    },
+                    "closed_elections": {
+                      "oneOf": [
+                        {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/Election"
+                          }
+                        },
+                        {
+                          "type": null
+                        },
+                        {
+                          "type": "undefined"
+                        }
+                      ]
+                    },
+                    "popular_elections": {
+                      "oneOf": [
+                        {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/Election"
+                          }
+                        },
+                        {
+                          "type": null
+                        }
+                      ]
+                    },
+                    "vote_counts": {
+                      "oneOf": [
+                        {
+                          "type": "array",
+                          "items": {
+                            "type": "object"
+                          }
+                        },
+                        {
+                          "type": null
+                        }
+                      ]
                     }
                   }
                 }
